# urlshorted

./: .gitignore  pyproject.toml
src/: config.py  create_db.py  database.py  main.py
src/models/: url_model.py
src/routers/: clck_statistics.py  redirect.py  urlshorted.py
src/schemas/: url.py
src/services/: urlshorted_servies.py
src/utils/: shortener.py
